[package]
name = "gfx_text"
version = "0.30.0"
authors = ["Kagami Hiiragi <kagami@genshiken.org>"]
description = "Draw text for gfx using freetype."
keywords = ["gfx", "graphics", "text", "freetype", "font"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PistonDevelopers/gfx_text"
repository = "https://github.com/PistonDevelopers/gfx_text.git"
documentation = "http://docs.piston.rs/gfx_text/gfx_text/"

[dependencies]
gfx = "0.18.1"
freetype-rs = "0.31.0"

[features]
default = ["include-font"]
include-font = []

### For examples

[dev-dependencies]
piston_window = "0.123.0"

#log = "*"
#env_logger = "*"
